#105 - fix for wrap/unwrap lines

--- a/styles.css
+++ b/styles.css
@@ -482,6 +482,7 @@ body.codeblock-customizer-style-codeblock-border-left .codeblock-customizer-head
 /* code wrapping */
 .markdown-rendered .codeblock-customizer-pre > code {
   white-space: var(--wrap-code) !important;
+  overflow-wrap: anywhere;
 }
 
 /* button container */
